--- a/sensors-backend-kafka/package.json
+++ b/sensors-backend-kafka/package.json
@@ -27,6 +27,7 @@
     "test": "test"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
